# Ax-Shell

./: .gitignore  README.md  install.sh  main.css  main.py  pyproject.toml  uninstall.sh  version.json
config/: config.py  data.py  loguru_config.py  settings_constants.py  settings_gui.py  settings_utils.py
config/cavalcade/: cava.ini
config/hypr/: hypridle.conf
config/matugen/templates/: hyprland-colors.conf  kitty-colors.conf  rofi-colors.rasi
modules/: bar.py  buttons.py  cal.py  calendar.py  cavalcade.py  cliphist.py  controls.py  corners.py  dashboard.py  dock.py  emoji.py  github.py  icons.py  kanban.py  launcher.py  metrics.py  mixer.py  notch.py  notifications.py  overview.py  pins.py  player.py  power.py  private_data.py  systemtray.py  tmux.py  tools.py  updater.py  wallpapers.py  weather.py  weather_forecast.py  widget_box.py  widgets.py
palettes/: dark.jsonc
scripts/: gamemode.sh  hyprland_multimonitor_config.conf  hyprpicker.sh  inhibit.py  ocr.sh  screenrecord.sh  screenshot.sh  toggle_launcher.py  toggle_overview.py
services/: brightness.py  monitor_focus.py  mpris.py
shell/: restart_shell.sh  run_shell.sh  shell-template.service
styles/: applets.css  bar.css  buttons.css  controls.css  dashboard.css  launcher.css  notifications.css  player.css  shadows.css  tools.css  wallpapers.css  weather_forecast.css  workspaces.css
utils/: conversion.py  debounce.py  functions.py  global_keybinds.py  hyprland_monitor.py  icon_resolver.py  icons.py  monitor_manager.py  occlusion.py  weather.py
widgets/: shadertoy.py  wayland.py
(+5 files in other folders)
