[project]
name = "ax-shell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dbus-python>=1.4.0",
    "g4f>=0.5.5.5",
    "ijson>=3.4.0",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pywayland>=0.4.18",
    "requests>=2.32.4",
    "setproctitle>=1.3.6",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]
