[project]
name = "ax-shell"
version = "0.0.44"
description = "A hackable shell for Hyprland, powered by Fabric."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fabric",
    "ijson>=3.4.0",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyopengl>=3.1.10",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "setproctitle>=1.3.6",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }